Fixing collapsing menu face - hurra

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -319,6 +319,9 @@ img .google-link {
 } 
 
 
-
+#fb-face img {
+    padding-right: 10px;
+    margin-left: 15px;
+}
 
 
